# Medical-Summary-Builder

./: .gitignore  Instruction.md  README.md  Thoughts_Ideas.md  pyproject.toml  requirements.txt
Data/: Medical Summary.docx
outputs/reports/: medical_summary.docx  medical_summary.md
prompts/: custom_table.md
src/medical_summary_builder/: __init__.py  cli.py  config.py  logging_config.py
src/medical_summary_builder/agents/: __init__.py  react_agent.py
src/medical_summary_builder/api/: __init__.py  app.py
src/medical_summary_builder/data_ingestion/: __init__.py  converters.py  docx_loader.py  pdf_loader.py
src/medical_summary_builder/llm/: __init__.py  client.py  embeddings.py
src/medical_summary_builder/outputs/: __init__.py
src/medical_summary_builder/pipelines/: __init__.py  orchestrator.py
src/medical_summary_builder/preprocessing/: __init__.py  chunker.py  metadata_router.py  page_ranker.py
src/medical_summary_builder/reporting/: __init__.py  report_writer.py
src/medical_summary_builder/schemas/: __init__.py  summary.py
src/medical_summary_builder/services/: __init__.py  summary_builder.py  template_filler.py
src/medical_summary_builder/utils/: __init__.py  io.py  prompts.py
src/medical_summary_builder/vectorstore/: __init__.py  index.py
