[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-summary-builder"
version = "0.1.0"
description = "A pipeline that ingests a disability/medical case file and produces a completed medical summary."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
